# hermit

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hermit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hermit/: ChatViewModel.kt  DownloadViewModel.kt  MainActivity.kt  Model.kt  ModelDownloadScreen.kt  ModelDownloader.kt  ModelListScreen.kt  ModelManager.kt  ModelRepository.kt  ModelStore.kt  ModelStoreScreen.kt  RemoteModel.kt
app/src/main/java/com/example/hermit/db/: ChatDatabase.kt
app/src/main/java/com/example/hermit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: hermit.xml  hermit_name.xml  splash_icon.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/example/hermit/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/com/example/nativelib/: NativeLib.kt
